hphp/hack/test/typecheck/enum/good/trivial_compare_string_arraykey_enum_good.php.rust_elab.exp
File "trivial_compare_string_arraykey_enum_good.php", line 3, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
